<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kobyzbook</string>

    <!-- DataBase Name And Version -->
    <string name="DataBaseName_Version">1</string>
    <string name="DataBaseName">DMPlayer</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="about">Material Design App, is an app designed by Javier Segovia Córdoba</string>
    <string name="action_about">About</string>
    <string name="website">desarrollador-android.com</string>
    <string name="github">GitHub: github.com/dahnark</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
        eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
        sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
        Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
        vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</string>
    <string name="title_activity_news_detail">NewsDetail</string>


    <string name="design">Design</string>
    <string name="develop">Develop</string>
    <string name="menu_header">menu header</string>

    <string name="kirispe">Introduction</string>
    <string name="about_qobyz">About kobyz</string>
    <string name="persons">Kobyz players</string>
    <string name="lessons">Lessons</string>
    <string name="beine_sabaqtar">Video lessons</string>
    <string name="audio">Audio</string>
    <string name="playlist">Playlist</string>
    <string name="test">Quiz</string>
    <string name="autor">Author</string>
    <string name="zhoba_turaly">About the project</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>

    <array name="drawerIcons">
        <item>@drawable/ic_allsongs</item>
        <item>@drawable/ic_allsongs</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_allsongs</item>
        <item>@drawable/ic_allsongs</item>
        <item>@drawable/ic_library_music</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_equalizer</item>
        <item>@drawable/ic_content_send</item>
        <item>@drawable/ic_allsongs</item>
    </array>

    <string name="setting_lang">Language</string>
    <string name="lang">English</string>
    <string name="new_person">New person</string>
    <string name="old_person">Old person</string>
    <string name="no_internet">No internet connection</string>
    <string name="check_internet">Check your network connection</string>
    <string name="download">Download </string>
    <string name="wait">Download...</string>

    <string name="lessons_qobyz">Music Qobyz</string>
    <string name="lessons_dombyra">Music Dombyra</string>
    <string name="lessons_song">Music Song</string>
    <string name="kuishiler">Kuishiler</string>
    <string name="kuiler">Kuiler</string>
    <string name="play_item">Play item</string>
    <string name="currently_playing_song">Song curently playing</string>
    <string name="currently_playing_artist">Artist curently playing</string>
    <string name="currently_playing_extra_info">Extra info</string>
    <string name="play_pause">Play Pouse</string>

    <string name="about_qobyz_a">Description of kobyz</string>
    <string name="about_qobyz_b">The history of origin of kobyz</string>
    <string name="about_qobyz_c">The etymology of kobyz</string>
    <string name="about_qobyz_d">The typology of kobyz</string>
    <string name="about_qobyz_e">The structure of kobyz</string>
    <string name="about_qobyz_f">Playing kobyz</string>
    <string name="about_qobyz_g">How kobyz is made</string>
    <string name="about_qobyz_h">The study of kobyz(quotations)</string>
    <string name="about_qobyz_i">Textbooks and scientific literature</string>
    <string name="error">Error when loading, plaease try latter</string>
    <string name="soon">Empty page</string>
    <string name="no_connect">No connect</string>
    <string name="count_kui"> songs</string>
    <string name="allsons">All songs</string>
    <string name="choose_app_theme">Choose App Theme</string>
    <string name="choose_app_theme_description">Press to change the primary, primary dark and accent colors</string>
    <string name="choose_theme_color">Choose Theme Color</string>
    <string name="disagree">DISAGREE</string>
    <string name="agree">AGREE</string>
    <string name="texts">Text</string>
    <string name="initialData">Download...</string>
    <string name="mark">point</string>
    <string name="finishtest">Finish test</string>
    <string name="score11">/10</string>
    <string name="scored">Your point:</string>
    <string name="anew">anew</string>
    <string name="project_author_life">About author</string>
    <string name="project_author_work">Author onerbayany</string>
    <string name="project_info">About project</string>
    <string name="biography">Biography</string>
    <string name="art_life">Art life</string>
    <string name="achievement">Achievement</string>
    <string name="work">Work</string>
    <string name="gilim">Scientific works</string>
    <string name="shigarma">Creative works</string>
    <string name="anyktama">Help phone:</string>
    <string name="mail">Mail</string>
    <string name="cansel">Cansel</string>

</resources>
