<android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/soon"/>

            <android.support.v7.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:clickable="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            </android.support.v7.widget.RecyclerView>


            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/rl_internet"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <RelativeLayout
                    android:id="@+id/ll_inter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">
                    <ImageView
                        android:paddingTop="8dp"
                        android:id="@+id/no_internet"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/icon_wifi"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:layout_centerHorizontal="true"
                        />
                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/no_internet"
                        android:id="@+id/internet_text1"
                        android:text="@string/no_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/internet_text1"
                        android:id="@+id/internet_text2"
                        android:text="@string/check_internet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"/>
                    <Button
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        android:id="@+id/btn_update"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/download"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/button_text_color"
                        android:shadowColor="@color/colorPrimary"
                        android:layout_below="@+id/internet_text2"
                        />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/circle_bg"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.github.rahatarmanahmed.cpv.CircularProgressView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/progress_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cpv_animAutostart="true"
                    app:cpv_indeterminate="true"
                    cpv_color="@color/colorPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/circle_text"
                    android:layout_below="@+id/progress_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    android:text="@string/wait"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
