<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:filterTouchesWhenObscured="false">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/nav_header_container"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/cpv_default_color"
            android:layout_alignParentTop="true"
            android:clickable="false">

            <!--<com.daimajia.slider.library.SliderLayout-->
                <!--android:id="@+id/slider"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--app:pager_animation="FlipHorizontal"-->
                <!--app:indicator_visibility="visible"-->
                <!--app:auto_cycle="true" >-->

                <TextSwitcher
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:id="@+id/textSwitcher" />

                <!--<TextSwitcher-->
                <!--android:text="Жусип Баласагун"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:textColor="@android:color/black"-->
                <!--android:textStyle="italic"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--android:layout_marginEnd="5dp"-->
                <!--android:id="@+id/textView11" />-->

                <!--</com.daimajia.slider.library.SliderLayout>-->

            <ImageView
                android:id="@+id/langImage"
                android:layout_width="wrap_content"
                android:contentDescription="image"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_language_white_24dp"/>
        </RelativeLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="3dp"-->
            <!--android:background="?colorPrimary"/>-->

        <RelativeLayout
            android:id="@+id/rl_zero"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img0"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/kirispe"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img0"
                android:id="@+id/tv_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kirispe"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img1"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/qobyz_turaly"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img1"
                android:id="@+id/tv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_qobyz"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img2"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/qobyzshylar"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img2"
                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persons"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img3"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/sabak"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img3"
                android:id="@+id/tv_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessons"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_four"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img5"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/beinesabak"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img5"
                android:id="@+id/tv_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beine_sabaqtar"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_five"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img4"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/audio"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img4"
                android:id="@+id/tv_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_six"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img6"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/player"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img6"
                android:id="@+id/tv_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_seven"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img7"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/test"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img7"
                android:id="@+id/tv_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_eight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img8"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/author"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img8"
                android:id="@+id/tv_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autor"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_nine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img10"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/about_project"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img10"
                android:id="@+id/tv_ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhoba_turaly"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ten"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_row_height"
            android:padding="@dimen/menu_row_padding">
            <ImageView
                android:id="@+id/menu_img9"
                android:layout_width="@dimen/menu_image_width"
                android:layout_height="@dimen/menu_image_height"
                android:src="@mipmap/news"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toRightOf="@+id/menu_img9"
                android:id="@+id/tv_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/menu_tv_mergin_left"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/menu_tv_size"/>
        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>